# P8-Image-Processing-for-Autonomous-Vehicle-Embedded-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py
app/: __init__.py  docker-entrypoint.sh  main.py  streamlit_app.py
app/backend/: Dockerfile  api.py  requirements.txt
app/frontend/: Dockerfile  requirements.txt  streamlit.py
docs/: APPRENTISSAGES.md  AZURE_GUIDE.md  Ikusawa_laetitia_4_note_technique_1225.md  TODO.md
notebooks/: 01-data_exploration.ipynb  02-training_pipeline.ipynb
p8_image_segmentation.egg-info/: PKG-INFO  requires.txt
src/: __init__.py  augmentations.py  azure_storage.py  callbacks.py  data_generator.py  feature_maps.py  metrics.py  mlflow_tracking.py  model_architecture.py  predictor.py  utils.py
tests/: conftest.py  test_api_endpoints.py
